# Back-To-Work

./: .gitignore  LICENSE  README.md  config.example.toml  pyinstaller_entry.py  pyproject.toml
.github/workflows/: release.yml
scripts/: gen_sound.py
src/backtowork/: __init__.py  art.py  cli.py  config.py  core.py  durations.py  models.py
src/backtowork/notifiers/: __init__.py  base.py  desktop.py  terminal.py
src/backtowork/providers/: __init__.py  base.py  claude_code.py  codex.py  command.py  manual.py
tests/: test_art.py  test_auto.py  test_claude_code.py  test_codex.py  test_config.py  test_core.py  test_durations.py  test_manual.py
