[project]
name = "backtowork"
version = "0.1.5"
description = "Tells you (with a sound) when your coder's credit comes back. Windows-first CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Akunimal" }]
keywords = ["claude", "claude-code", "cli", "usage", "rate-limit", "notifier", "windows"]
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
toast = ["winotify>=1.1; platform_system=='Windows'"]

[project.urls]
Homepage = "https://github.com/Akunimal/Back-To-Work"
Repository = "https://github.com/Akunimal/Back-To-Work"

[project.scripts]
backtowork = "backtowork.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtowork"]
artifacts = ["src/backtowork/sounds/*.wav"]

[dependency-groups]
dev = ["pytest>=8.0"]
